# anvil

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  wheels.yml
docs/: design.md
src/anvil/: __init__.py  _version.py  config.py  exceptions.py  logging.py  mcp_server.py
src/anvil/caas/: __init__.py  actions.py  audit.py  llm_tier.py  preflight.py  rule_engine.py  sentinel.py
src/anvil/caas/kb/: __init__.py  loader.py  schema.py
src/anvil/caas/kb/entries/: harness.yaml  install.yaml  memory.yaml  model_loading.yaml  sampler.yaml  tokenization.yaml
src/anvil/cli/: __init__.py  doctor.py  eval.py  main.py  manifest.py  mcp.py  serve.py
src/anvil/datasets/: __init__.py
src/anvil/engine/: __init__.py  factory.py  public.py
src/anvil/engine/_hf/: __init__.py  embed_runner.py  mm_runner.py  runner.py
src/anvil/engine/_vllm/: __init__.py  adapter.py  logits_proxy.py  version_compat.py
src/anvil/engine/_wrappers/: __init__.py
src/anvil/manifest/: __init__.py  canonical.py  diff.py  freeze.py  replay.py  schema.py  sign.py  verify.py
src/anvil/metrics/: __init__.py  exact_match.py  pass_at_k.py
src/anvil/models/: __init__.py  registry.py
src/anvil/models/_fast/: __init__.py  gemma.py  llama.py  mistral.py  phi.py  qwen.py  qwen_vl.py
src/anvil/models/_slow/: __init__.py
src/anvil/plugins/: __init__.py  v1.py
src/anvil/primitives/: __init__.py  chat_template.py  hidden_state_spec.py  logits_processor.py  multimodal.py  request.py  response.py  sampler.py  tokenization.py
src/anvil/research/: __init__.py  dola.py
src/anvil/server/: __init__.py  app.py  routes.py  schemas.py  serve.py  tool_calling.py
src/anvil/tasks/: __init__.py  base.py  public.py  registry.py  runner.py
src/anvil/tasks/builtin/: __init__.py  gsm8k.py  humaneval.py  mmlu.py  mmmu.py
src/anvil/tasks/lm_eval_shim/: __init__.py  compare.py  compat.py  compiler.py
tests/: conftest.py
tests/corpus/: caas_test_cases.yaml
tests/helpers/: __init__.py  datasets.py  stub_engine.py
tests/integration/: test_milestone_0.py  test_milestone_1.py  test_milestone_2.py  test_milestone_3.py  test_milestone_4.py  test_milestone_5.py  test_milestone_6.py  test_runner_mcq.py
tests/unit/: test_caas_kb.py  test_caas_rule_engine.py  test_chat_template.py  test_doctor.py  test_exceptions.py  test_gsm8k_extractor.py  test_hidden_state_spec.py  test_humaneval.py  test_lm_eval_shim.py  test_manifest.py  test_manifest_canonical.py  test_metrics.py  test_mmlu.py  test_mmmu.py  test_multimodal.py  test_multiturn_fewshot.py  test_request_response.py  test_sampler.py  test_server.py  test_task_registry.py  test_vllm_version_compat.py
